mobile responsiveness of club home page

--- a/views/programs/englishlang4all/englishClubs/clubInfoPage.ejs
+++ b/views/programs/englishlang4all/englishClubs/clubInfoPage.ejs
@@ -73,7 +73,7 @@
       </div>
       <%}%>
     </div>
-    <div class="swiper-pagination"></div>
+    <!-- <div class="swiper-pagination"></div> -->
     </div>
     <!--
   <hr>
