--- a/public/stylesheets/englishforAll/englishClubs/show.css
+++ b/public/stylesheets/englishforAll/englishClubs/show.css
@@ -144,6 +144,7 @@ section {
   background: #1A2980;
   /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #015174, #1A2980);
+  display: inline-block;
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #015174, #1A2980);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -973,10 +974,23 @@ customers-cards:before {
     color: #ffffffd7;
     font-family: "Poppins", sans-serif;
     /* font-family: "Kaushan Script", cursive; */
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 900;
   }
 
+  .my-progress{
+    font-size: smaller;
+  }
+
+
+.club-motto {
+  font-size: 1.2rem;
+  
+}
+  .club-info {
+    margin-left: 1rem;
+    padding: 2rem 1rem;
+  }
   .club-motto {
     font-size: 1.5rem;
     color: rgb(48, 5, 109);
@@ -995,7 +1009,15 @@ customers-cards:before {
     width: 3rem;
     height: 0.8rem;
   }
+  .club-name {
+    color: #ffffffd7;
+    font-family: "Poppins", sans-serif;
+    /* font-family: "Kaushan Script", cursive; */
+    font-size: 2rem;
+    font-weight: 900;
+  }
 
+  
   .slider {
     width: 90vw;
     padding: 2rem;
