--- a/views/admindashboard.ejs
+++ b/views/admindashboard.ejs
@@ -3,7 +3,6 @@
 <!-- WORD Processor-->
 <script src="https://cdn.tiny.cloud/1/p06f8vxdpje8xosyvnq48z68vc7n479iauh5s2jk9zx30qg2/tinymce/5/tinymce.min.js"
   referrerpolicy="origin"></script>
-</script>
 <script>
   tinymce.init({
     selector: '.mytextarea',
@@ -52,6 +51,10 @@
   <h1 class="text-center admin-text py-2" style="color: rgb(235, 227, 237)">
     Welcome to Admin Dashboard
   </h1>
+</div>
+
+<div class="container my-3 justify-content-around col-md-4">
+<a href="/admindashboard/allUsers" class="btn d-block btn-success">All Users</a>
 </div>
 
 <div class="d-flex justify-content-around" style="padding: 8rem 0">
