--- a/public/stylesheets/user/userprofile.css
+++ b/public/stylesheets/user/userprofile.css
@@ -31,18 +31,14 @@ body {
     text-align: start;
     font-size: 1.5rem;
     line-height: 2rem;
-    /* font-family: "Kaushan Script", cursive; */
-    /* font-family: 'Paytone One', sans-serif; */
-    /* font-family: "Rye", cursive; */
-    /* font-family: 'Titan One', cursive; */
     color: rgb(12, 78, 12);
-    /* font-family: "Nosifer", cursive; */
 }
 
 .quote {
-    margin: 2rem 1rem 3rem ;
-    text-align: start ;
-    font-family: "Nosifer", cursive; 
+    margin: 2rem 1rem 3rem;
+    text-align: start;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: italic;
     font-size: 1.4rem;
 }
 
@@ -87,7 +83,7 @@ body {
 .club-name:hover, .club-name:focus {
     color: rgb(11, 98, 174);
     background-color: aliceblue;
-    border: 2px solid rgb(11, 98, 174); 
+    border: 2px solid rgb(11, 98, 174);
 }
 
 .program-wrapper {
@@ -102,6 +98,10 @@ body {
     /* height: 20rem; */
     width: 100%;
 }
+
+
+
+
 
 .pecp-coach {
     background: url(https://images.pexels.com/photos/5685821/pexels-photo-5685821.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
@@ -126,12 +126,89 @@ body {
     transform: translate(-50%, -50%);
 }
 
-@media (max-width: 578px) {
-.program-wrapper {
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    border-radius: 5px;
-    padding: 0.5rem;
-    margin: 1rem 2rem 4rem;
-    padding: 1rem 1rem;
+
+.mal-wrapper {
+    padding: 5rem 0 10rem;
 }
+.mal-msg{
+ font-size: 1.4rem;
+ font-family: Georgia, 'Times New Roman', Times, serif;
+ padding: 3rem 10rem 0;
+ font-style: italic;
+ text-align: center;
+}
+
+.video-wrapper {
+    width: 90vw;
+}
+
+.perf-number{
+padding: 0.5rem ;
+border-radius: 50%;
+background-color: #2239e1;
+color: #ffffff;
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+font-weight: 700;
+margin-right: 1rem;
+}
+
+.topic-title {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.1rem;
+    color: rgb(255, 255, 255);
+    border-radius: 4px;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    background: #6441A5;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2a0845, #6441A5);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2a0845, #6441A5);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width: 90%;
+    padding: 1rem;
+}
+
+
+
+/* CSS */
+.button-87 {
+  /* margin: 10px; */
+  padding: 0.5rem 1rem;
+  text-align: center;
+  /* text-transform: uppercase; */
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 500;
+  box-shadow: 0px 0px 14px -7px #a819f0;
+  background-image: linear-gradient(45deg, #5699d8 0%, #3778c4  51%, #152d91  100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-87:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-87:active {
+  transform: scale(0.95);
+}
+
+@media (max-width: 578px) {
+    .program-wrapper {
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+        border-radius: 5px;
+        padding: 0.5rem;
+        margin: 1rem 2rem 4rem;
+        padding: 1rem 1rem;
+    }
 }
