--- a/views/user/userprofile.ejs
+++ b/views/user/userprofile.ejs
@@ -1,21 +1,27 @@
 <% layout('layouts/boilerplate') %>
   <link href="/stylesheets/user/userprofile.css" rel="stylesheet" />
+
   <div class="container col-md-10 ">
     <div class="row user-banner">
       <div class="col-md-3">
         <img src="<%= user.imageUrl %>" class="user-img img-thumbnail" alt="">
       </div>
+
       <div class="col-md-6">
         <h1 class="welcome-msg py-3">
           Salut
           <%= user.username %> ! <span> <br> Bienvenue dans votre espace personnel d'apprentissage</span>
         </h1>
       </div>
+
       <div class="col-md-3">
-        <a href="/reset-password" class="btn btn-outline-danger my-3">Reinitialiser mon mot de passe</a>
-        <% if (currentUser.role==="account-manager" || currentUser.role==="admin" ) {%>
-          <a href="/register" class="btn btn-outline-primary my-3">Creation de compte</a>
+        <% if (!user.isVip) {%>
+          <a href="/reset-password" class="btn btn-outline-danger my-3">Reinitialiser mon mot de passe</a>
           <% } %>
+
+            <% if (currentUser.role==="account-manager" || currentUser.role==="admin" ) {%>
+              <a href="/register" class="btn btn-outline-primary my-3">Creation de compte</a>
+              <% } %>
       </div>
     </div>
   </div>
@@ -28,7 +34,7 @@
     </p>
   </div>
 
-  <h2 class="my-program">Mes programmes</h2>
+  <h2 class="my-program">Mes programmes de club d'Anglais</h2>
   <div class="row container mx-5 my-5">
     <div class="col-md-6">
       <% if (currentUser.isPecpStudent) {%>
@@ -92,6 +98,65 @@
         </div>
     </div>
   </div>
+
+  <h2 class="my-program">Moi en Action en Live</h2>
+  <p class="mal-msg">Se revoir en action permet de s'autoévaluer et relever les points d'amélioration. Votre progression sera également visible à vos yeux et ceci boostera votre confiance.</p> 
+  <div class="mal-wrapper d-flex justify-content-center ">
+    <div class="video-wrapper">
+    <div class="row">
+      <!-- Video 1-->
+      <%for (i= 0; i < user.myLivePerf.length; i++){%>
+      <div class="col-md-4">
+        <div id="tv-container">
+          <div id="monitor">
+            <div class="afrohk-TV">
+              <h3 class="text-center afrohk-text mb-2 py-0"><span class="afrohk">Afro </span><span
+                  class="tv">Language Lab</span>
+              </h3>
+            </div>
+            <div id="monitorscreen">
+              <iframe id="vimeo-content" width="100%" height="100%" src="<%= user.myLivePerf[i].lpVideoLink %>"
+                title="YouTube video player" 
+                allow="accelerometer; autoplay; clipboard-write; fullscreen; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+              </iframe>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="d-flex topic-title justify-content-between align-items-center">
+          <p class="pt-2"><span class="perf-number"><%= user.myLivePerf.length - i%></span><%= user.myLivePerf[i].topicTitle %>
+          </p>
+          <button type="" class="button-87" data-bs-toggle="modal" data-bs-target="#perf_<%=i%>">
+            Feedback 
+           </button>
+          </div>
+          <!-- Button trigger modal -->
+          
+          
+          <!-- Modal -->
+          <div class="modal fade" id="perf_<%=i%>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Feedback</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <%= user.myLivePerf[i].feedback %> 
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <%}%>
+    </div>
+  </div>
+</div>
 
   <!-- Instructors -->
   <% if (currentUser.isPecpCoach) {%>
