--- a/views/programs/englishlang4all/englishClubs/show.ejs
+++ b/views/programs/englishlang4all/englishClubs/show.ejs
@@ -896,9 +896,6 @@
             <h4 class="song-list">Songs are a fun and good way to improve listening, fluency and more. LSC is designed
               to help you become a better English Speaker.</h4>
             <hr>
-            <p class="py-3 px-4 fs-5"><span class="fw-bold"> Instructions:</span> Click on the song to try the
-              LSC
-              challenge</p>
 
             <div class="row">
               <%for(i=0; i < 4 ; i++){%>
@@ -906,8 +903,8 @@
                   <div class="col-md-6 col-lg-4">
                     <div class="exercise-wrapper pb-2">
                       <p
-                        style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 1.1rem; color: #4A00E0;">
-                        <i class="fa-solid fa-music mx-3"></i>
+                        style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 1.1rem; color: #4A00E0;" class="lsc-title">
+                        <i class="fa-solid fa-music me-3"></i>
                         <%= club.LSC[i].exerciseTitle %>
                       </p>
                       <a style="background-color: rgb(53, 44, 232); border-radius:5px; text-align: center; font-size: 14px;  color:aliceblue;"
