--- a/public/stylesheets/user/userprofile.css
+++ b/public/stylesheets/user/userprofile.css
@@ -8,8 +8,7 @@ body {
 
 .user-banner {
     padding: 2rem 1rem;
-    margin-top: 3rem;
-    margin-bottom: 4rem;
+    margin: 3rem 1rem;
     /* height: 30vh; */
     display: flex;
     /* flex-direction: column; */
@@ -207,8 +206,15 @@ margin-right: 1rem;
     .program-wrapper {
         box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
         border-radius: 5px;
-        padding: 0.5rem;
         margin: 1rem 2rem 4rem;
         padding: 1rem 1rem;
     }
+
+    .mal-msg{
+        font-size: 1.4rem;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        padding: 3rem 5rem 0;
+        font-style: italic;
+        text-align: center;
+       }
 }
