--- a/views/all_users.ejs
+++ b/views/all_users.ejs
@@ -22,7 +22,7 @@
   }
  </style>
 
- <h1>All Users</h1>
+ <h1 class="text-center py-5">All Users</h1>
  <div class="container">
   <table class="table table-dark table-bordered  table-responsive table-hover">
    <thead>
