--- a/views/programs/englishlang4all/englishClubs/show.ejs
+++ b/views/programs/englishlang4all/englishClubs/show.ejs
@@ -901,7 +901,7 @@
               <%for(i=0; i < 4 ; i++){%>
                 <% if(club.LSC[i]){%>
                   <div class="col-md-6 col-lg-4">
-                    <div class="exercise-wrapper pb-2">
+                    <div class="exercise-wrapper my-3 pb-2">
                       <p
                         style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 1.1rem; color: #4A00E0;" class="lsc-title">
                         <i class="fa-solid fa-music me-3"></i>
