--- a/views/programs/englishlang4all/englishClubs/show.ejs
+++ b/views/programs/englishlang4all/englishClubs/show.ejs
@@ -589,7 +589,7 @@
                   <div class="row">
                     <%for(i=0; i < 2 ; i++){%>
                       <% if(club.grammarExercise[i]){%>
-                        <div class="col-md-4">
+                        <div class="col-md-4 my-2">
                           <div class="sp-card">
                             <a class="d-block m-2 fs-5" target="_blank"
                               href="<%= club.grammarExercise[i].exerciseLink %>">
@@ -916,7 +916,6 @@
                   </div>
                   <%}%>
                     <%}%>
-
             </div>
           </div>
         </section>
