english club online

--- a/views/programs/englishlang4all/englishClubs/home.ejs
+++ b/views/programs/englishlang4all/englishClubs/home.ejs
@@ -93,6 +93,7 @@
             </p>
             <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" data-bs-toggle="modal"
               data-bs-target="#inscription">S'inscrire</a>
+              <p style="color: rgb(72, 162, 241); " class="py-2">En Présentiel  ou 100% en Ligne</p>
           </div>
         </div>
         <!-- Modal for Inscription -->
@@ -397,7 +398,7 @@
             <h3>Parlez Anglais cette 
               année
               </h3>
-            <p> Apprenez anglais en essayant autrement</p>
+            <p class="py-2" style="color: rgb(72, 162, 241); "> Apprenez l'Anglais en essayant autrement en Présentiel ou 100% en Ligne</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" data-bs-toggle="modal"
