english club program link

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -110,7 +110,7 @@
             <div class="footer-title">Liens Utiles</div>
             <ul class="list">
               <li><a href="/pecp">Personal English Coaching Program</a></li>
-              <li><a href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English at Work</a></li>
+              <li><a href="/englishlang4all/clubs/home">Natural English Conversation Clubs</a></li>
             </ul>
           </div>
           <ul class="footer-social">
