--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -163,7 +163,7 @@
       </a>
       <ul class="dropdown-menu mx-2" aria-labelledby="navbarDropdown">
         <li>
-          <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English for Professionals</a>
+          <a class="dropdown-item" href="/englishlang4all/clubs/home">Natural English Conversation Clubs</a>
         </li>
         <li>
           <a class="dropdown-item" href="/pecp">Personal English Coaching Program</a>
@@ -306,7 +306,7 @@
                     alt="English at work" />
                 </div>
                 <div class="card-body d-flex flex-column align-items-start ms-3">
-                  <h3 class="program-name">Anglais Naturel pour Professionnels</h3>
+                  <h3 class="program-name">Club de Conversation Naturelle</h3>
                   <p class="program-description">
                     Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais des cadres
                     d'entreprise dans des clubs.
