--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -66,7 +66,7 @@
         </a>
         <ul class="dropdown-menu mx-2" aria-labelledby="navbarDropdown">
           <li>
-            <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English for Professionals</a>
+            <a class="dropdown-item" href="/englishlang4all/clubs/home">Natural English Conversation Clubs</a>
           </li>
           <li>
             <a class="dropdown-item" href="/pecp">Personal English Coaching Program</a>
