--- a/views/programs/englishlang4all/englishClubs/show.ejs
+++ b/views/programs/englishlang4all/englishClubs/show.ejs
@@ -302,12 +302,18 @@
                       <%= club.dailyVocab[0].wordOfDay.wordMeaning %>
                     </p>
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
+                    <button type="button" class="btn mx-2 btn-outline-success" data-bs-toggle="modal"
                       data-bs-target="#wod-1">
                       Understand better with examples
                     </button>
 
-                    <!-- Modal -->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn mx-2 btn-outline-primary" data-bs-toggle="modal"
+                      data-bs-target="#wod-2">
+                      build my own examples
+                    </button>
+
+                    <!-- Modal for wod explanation -->
                     <div class="modal fade" id="wod-1" tabindex="-1" aria-labelledby="exampleModalLabel"
                       aria-hidden="true">
                       <div class="modal-dialog modal-lg
@@ -332,6 +338,37 @@
                         </div>
                       </div>
                     </div>
+
+                    <!-- Modal for student examples -->
+                    <div class="modal fade" id="wod-2" tabindex="-1" aria-labelledby="exampleModalLabel"
+                      aria-hidden="true">
+                      <div class="modal-dialog modal-lg
+                                modal-fullscreen-md-down">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title " id="exampleModalLabel">
+                              Understand better by building my own examples
+                            </h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body px-5">
+                           <form action="/englishlang4all/clubs/<%= hub.cityName %>/hub/<%= hub._id %>/club/<%= club._id %>/dailyVocab/<%= club.dailyVocab[0]._id%>/wod_St_ex" method="POST">
+                            <div class="form-floating">
+                              <textarea class="form-control" name="review[text]" placeholder="Leave a comment here"
+                                id="floatingTextarea" style="height: 70px" required></textarea>
+                              <label for="floatingTextarea">Build my own examples with the word of the day</label>
+                            </div>
+                            <button class="btn btn-outline-primary my-3">Post my example</button>
+                          </form> 
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn
+                                      btn-danger" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -352,12 +389,12 @@
                     </p>
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-                      data-bs-target="#wod-2">
+                      data-bs-target="#iod-1">
                       Understand better with examples
                     </button>
 
                     <!-- Modal -->
-                    <div class="modal fade" id="wod-2" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    <div class="modal fade" id="iod-1" tabindex="-1" aria-labelledby="exampleModalLabel"
                       aria-hidden="true">
                       <div class="modal-dialog modal-lg
                                   modal-fullscreen-md-down">
@@ -386,12 +423,12 @@
             </div>
           </div>
 
-        <div class="d-flex justify-content-around mb-4">
-          <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#latest-vocab">
-            Latest Vocabulary of the week
-          </button>
-        </div>
+          <div class="d-flex justify-content-around mb-4">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#latest-vocab">
+              Latest Vocabulary of the week
+            </button>
+          </div>
           <!-- Modal for latest vocabulary -->
           <div class="modal fade" id="latest-vocab" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
@@ -403,32 +440,36 @@
                 </div>
                 <div class="modal-body">
                   <div class="container d-flex justify-content-around flex-column">
-                    <h4  style="background-color: #6c00e0; border-radius: 5px;" class="text-white text-center py-2" >Words or Phrases</h4>
+                    <h4 style="background-color: #6c00e0; border-radius: 5px;" class="text-white text-center py-2">Words
+                      or Phrases</h4>
                     <% for (i=0; i < 5 ; i++){%>
                       <div>
-                        <% if(club.dailyVocab[i]){%> 
-                        <p class="card-title fs-5"  style="color:#080364; font-family: Georgia, 'Times New Roman', Times, serif;">
-                          <%= club.dailyVocab[i].wordOfDay.word %>
-                        </p>
-        
-                        <p class="card-text fs-6"><span class="fw-bold">Meaning : </span>
-                          <%= club.dailyVocab[i].wordOfDay.wordMeaning %>
-                        </p>
-                      <%}%>
+                        <% if(club.dailyVocab[i]){%>
+                          <p class="card-title fs-5"
+                            style="color:#080364; font-family: Georgia, 'Times New Roman', Times, serif;">
+                            <%= club.dailyVocab[i].wordOfDay.word %>
+                          </p>
+
+                          <p class="card-text fs-6"><span class="fw-bold">Meaning : </span>
+                            <%= club.dailyVocab[i].wordOfDay.wordMeaning %>
+                          </p>
+                          <%}%>
                       </div>
                       <hr>
                       <%}%>
-                        <h4 style="background-color: #4A00E0; border-radius: 5px;" class="text-white text-center mt-4 py-2" >Idiomatic expression</h4>
+                        <h4 style="background-color: #4A00E0; border-radius: 5px;"
+                          class="text-white text-center mt-4 py-2">Idiomatic expression</h4>
                         <% for (i=0; i < 5 ; i++){%>
                           <div class="" style="">
-                          <% if(club.dailyVocab[i]){%>
-                            <p class="card-title  fs-5" style="color:#080364; font-family: Georgia, 'Times New Roman', Times, serif;">
-                              <%= club.dailyVocab[i].IdiomDay.idiom %>
-                            </p>
-                            <p class="card-text fs-6"><span class="fw-bold">Meaning : </span>
-                              <%= club.dailyVocab[i].IdiomDay.idiomMeaning %>
-                            </p>
-                          <%}%>
+                            <% if(club.dailyVocab[i]){%>
+                              <p class="card-title  fs-5"
+                                style="color:#080364; font-family: Georgia, 'Times New Roman', Times, serif;">
+                                <%= club.dailyVocab[i].IdiomDay.idiom %>
+                              </p>
+                              <p class="card-text fs-6"><span class="fw-bold">Meaning : </span>
+                                <%= club.dailyVocab[i].IdiomDay.idiomMeaning %>
+                              </p>
+                              <%}%>
                           </div>
                           <hr>
                           <%}%>
@@ -907,8 +948,8 @@
                 <% if(club.LSC[i]){%>
                   <div class="col-md-6 col-lg-4">
                     <div class="exercise-wrapper my-3 pb-2">
-                      <p
-                        style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 1.1rem; color: #4A00E0;" class="lsc-title">
+                      <p style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 1.1rem; color: #4A00E0;"
+                        class="lsc-title">
                         <i class="fa-solid fa-music me-3"></i>
                         <%= club.LSC[i].exerciseTitle %>
                       </p>
@@ -1050,7 +1091,7 @@
                       </div>
                       <div id="monitorscreen">
                         <iframe id="vimeo-content" width="100%" height="100%" src="<%= club.media[i].videoLink %>"
-                          title="YouTube video player" frameborder="0"
+                          title="YouTube video player"
                           allow="accelerometer; autoplay; clipboard-write; fullscreen; encrypted-media; gyroscope; picture-in-picture"
                           allowfullscreen>
                         </iframe>
